# Real-Time-Translation-AI-Agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: signalwire_configure_number.py  smoke_contract.py
src/real_time_translation_ai_agent/: agent.py  app.py  config.py  logging_utils.py  main.py  models.py  translation.py
